fixed credits, fixed column alignment, text alignment in royal slider

--- a/rs-skins/rs-lga.css
+++ b/rs-skins/rs-lga.css
@@ -467,6 +467,7 @@
   width: 100%;
   height: auto;
   display: block;
+  padding-bottom: 20px;
 }
 .rsContentSlider h3,
 .rsContentSlider p {
